--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "ts-jest": "^24.1.0",
     "ts-node": "^8.4.1",
     "typescript": "^3.6.4"
+  },
+  "dependencies": {
+    "reflect-metadata": "^0.2.2"
   }
 }
