--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,11 @@
 
     /* Strict Type-Checking Options */
     "strict": true,                           /* Enable all strict type-checking options. */
+
+    // Variables pour l'instanciation de classes par réflexion.
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    
     // "noImplicitAny": true,                 /* Raise error on expressions and declarations with an implied 'any' type. */
     // "strictNullChecks": true,              /* Enable strict null checks. */
     // "strictFunctionTypes": true,           /* Enable strict checking of function types. */
